platform2.orbit8.com/sysconfig/iptables.save
# Generated by iptables-save v1.4.21 on Sun Sep 18 17:01:16 2016
*raw
:PREROUTING ACCEPT [291822:136584651]
:OUTPUT ACCEPT [274012:32686868]
COMMIT
# Completed on Sun Sep 18 17:01:16 2016
# Generated by iptables-save v1.4.21 on Sun Sep 18 17:01:16 2016
*mangle
:PREROUTING ACCEPT [336721:157552269]
:INPUT ACCEPT [336656:157546061]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [317002:39434441]
:POSTROUTING ACCEPT [317002:39434441]
:nova-api-POSTROUTING - [0:0]
-A POSTROUTING -j nova-api-POSTROUTING
COMMIT
# Completed on Sun Sep 18 17:01:16 2016
# Generated by iptables-save v1.4.21 on Sun Sep 18 17:01:16 2016
*nat
:PREROUTING ACCEPT [127:10079]
:INPUT ACCEPT [62:3871]
:OUTPUT ACCEPT [6272:401949]
:POSTROUTING ACCEPT [6272:401949]
:nova-api-OUTPUT - [0:0]
:nova-api-POSTROUTING - [0:0]
:nova-api-PREROUTING - [0:0]
:nova-api-float-snat - [0:0]
:nova-api-snat - [0:0]
:nova-postrouting-bottom - [0:0]
-A PREROUTING -j nova-api-PREROUTING
-A OUTPUT -j nova-api-OUTPUT
-A POSTROUTING -j nova-api-POSTROUTING
-A POSTROUTING -j nova-postrouting-bottom
-A nova-api-snat -j nova-api-float-snat
-A nova-postrouting-bottom -j nova-api-snat
COMMIT
# Completed on Sun Sep 18 17:01:16 2016
# Generated by iptables-save v1.4.21 on Sun Sep 18 17:01:16 2016
*filter
:INPUT ACCEPT [1:52]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2:104]
:nova-api-FORWARD - [0:0]
:nova-api-INPUT - [0:0]
:nova-api-OUTPUT - [0:0]
:nova-api-local - [0:0]
:nova-filter-top - [0:0]
-A INPUT -j nova-api-INPUT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 5671,5672 -m comment --comment "001 amqp incoming amqp_10.1.13.251" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8042 -m comment --comment "001 aodh-api incoming aodh_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8777 -m comment --comment "001 ceilometer-api incoming ceilometer_api" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 3260 -m comment --comment "001 cinder incoming cinder_10.1.13.14" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8776 -m comment --comment "001 cinder-api incoming cinder_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9292 -m comment --comment "001 glance incoming glance_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8041 -m comment --comment "001 gnocchi-api incoming gnocchi_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8004 -m comment --comment "001 heat incoming heat" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 443 -m comment --comment "001 horizon 443  incoming" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 5000,35357 -m comment --comment "001 keystone incoming keystone" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 3306 -m comment --comment "001 mariadb incoming mariadb_10.1.13.251" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 27017 -m comment --comment "001 mongodb-server incoming mongodb_server" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 80 -m comment --comment "001 nagios incoming" -j ACCEPT
-A INPUT -p udp -m multiport --dports 67 -m comment --comment "001 neutron dhcp in incoming neutron_dhcp_in_10.1.13.251" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 9696 -m comment --comment "001 neutron server incoming neutron_server_10.1.13.251" -j ACCEPT
-A INPUT -s 10.1.13.0/24 -p udp -m multiport --dports 4789 -m comment --comment "001 neutron tunnel port incoming neutron_tunnel_10.1.13.251_10.1.13.0/24" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8773,8774,8775 -m comment --comment "001 nova api incoming nova_api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 6080 -m comment --comment "001 novncproxy incoming" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 6379 -m comment --comment "001 redis service incoming redis service from 10.1.13.251" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8386 -m comment --comment "001 sahara api incoming sahara-api" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8080 -m comment --comment "001 swift proxy incoming swift_proxy" -j ACCEPT
-A INPUT -s 10.1.13.11/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.13.11" -j ACCEPT
-A INPUT -s 10.1.13.12/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.13.12" -j ACCEPT
-A INPUT -s 10.1.13.13/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.13.13" -j ACCEPT
-A INPUT -s 10.1.13.14/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.13.14" -j ACCEPT
-A INPUT -s 10.1.13.251/32 -p tcp -m multiport --dports 6000,6001,6002,873 -m comment --comment "001 swift storage and rsync incoming swift_storage_and_rsync_10.1.13.251" -j ACCEPT
-A INPUT -p tcp -m multiport --dports 8779 -m comment --comment "001 trove api incoming trove" -j ACCEPT
-A FORWARD -j nova-filter-top
-A FORWARD -j nova-api-FORWARD
-A OUTPUT -p udp -m multiport --dports 68 -m comment --comment "001 neutron dhcp out outgoing neutron_dhcp_out_10.1.13.251" -j ACCEPT
-A OUTPUT -j nova-filter-top
-A OUTPUT -j nova-api-OUTPUT
-A nova-api-INPUT -d 10.1.13.251/32 -p tcp -m tcp --dport 8775 -j ACCEPT
-A nova-filter-top -j nova-api-local
COMMIT
# Completed on Sun Sep 18 17:01:16 2016
